# ece278a

./: .gitmodules
lectures/: 03_feature_detection_matching.ipynb
topics/: README.md
topics/SfM/: .envrc  README.md  SfM.py  pyproject.toml
topics/SfM/__marimo__/session/: SfM.py.json
topics/SfM/layouts/: SfM.grid.json  SfM.slides.json
topics/contour_tracing/: contributions.txt  countour_tracing_paper.ipynb
topics/daniel-dylan-justin-logan/: division_of_labor.txt  environment.yml
topics/segmentation_clustering_graph/: README.md  division_of_labor.txt
topics/segmentation_thresholding_region-based/: contributions.txt  environment.yml
