[project]
name = "sfm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "marimo>=0.23.6",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "numpy>=2.4.4",
    "opencv-contrib-python>=4.13.0.92",
    "playwright>=1.59.0",
]

[dependency-groups]
dev = [
    "nbformat>=5.10.4",
    "ruff>=0.15.13",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
]
